// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeRow renders correctly for all CodeRowStatus states 1`] = `
<View
  style={
    {
      "backgroundColor": "#F0F0F0",
      "borderColor": "#E6E6E6",
      "borderRadius": 3,
      "borderWidth": 1,
      "height": 50,
      "justifyContent": "center",
      "marginVertical": 5,
      "paddingHorizontal": 10,
    }
  }
>
  <Text
    style={
      {
        "color": "#505050",
        "fontFamily": "Inter-Regular",
        "fontSize": 15,
        "lineHeight": 22,
      }
    }
  >
    placeholder
  </Text>
</View>
`;

exports[`CodeRow renders correctly for all CodeRowStatus states 2`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#FFF",
        "borderColor": "#E6E6E6",
        "borderRadius": 3,
        "borderWidth": 1,
        "flex": 0,
        "height": 50,
        "marginVertical": 5,
      },
    ]
  }
>
  <TextInput
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    placeholder="placeholder"
    shouldShowClipboard={[MockFunction]}
    style={
      [
        {
          "color": "#2E3338",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 22,
        },
        {
          "flex": 1,
          "lineHeight": 22,
          "paddingHorizontal": 0,
          "paddingVertical": 12,
        },
        undefined,
      ]
    }
    value="test"
  />
</View>
`;

exports[`CodeRow renders correctly for all CodeRowStatus states 3`] = `
<View
  style={
    {
      "backgroundColor": "#FFF",
      "borderColor": "#E6E6E6",
      "borderRadius": 3,
      "borderWidth": 1,
      "height": 50,
      "justifyContent": "center",
      "marginVertical": 5,
      "paddingHorizontal": 10,
      "position": "relative",
    }
  }
>
  <Text
    style={
      {
        "color": "#505050",
        "fontFamily": "Inter-Regular",
        "fontSize": 15,
        "lineHeight": 22,
      }
    }
  >
    test...
  </Text>
  <ActivityIndicator
    color="#42D689"
    size="small"
    style={
      {
        "backgroundColor": "#FFF",
        "padding": 10,
        "position": "absolute",
        "right": 3,
        "top": 5,
      }
    }
  />
</View>
`;

exports[`CodeRow renders correctly for all CodeRowStatus states 4`] = `
<View
  style={
    {
      "backgroundColor": "#F8F9F9",
      "borderRadius": 3,
      "height": 50,
      "justifyContent": "center",
      "marginVertical": 5,
      "paddingHorizontal": 10,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#505050",
        "fontFamily": "Inter-Regular",
        "fontSize": 15,
        "lineHeight": 22,
      }
    }
  >
    test...
  </Text>
</View>
`;

exports[`CodeRow renders correctly for all CodeRowStatus states 5`] = `
<View
  style={
    {
      "backgroundColor": "#F8F9F9",
      "borderRadius": 3,
      "height": 50,
      "justifyContent": "center",
      "marginVertical": 5,
      "paddingHorizontal": 10,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#505050",
        "fontFamily": "Inter-Regular",
        "fontSize": 15,
        "lineHeight": 22,
      }
    }
  >
    test...
  </Text>
  <View
    style={
      {
        "backgroundColor": "#F8F9F9",
        "padding": 10,
        "position": "absolute",
        "right": 3,
        "top": 3,
      }
    }
  >
    <svg
      fill="none"
      height={20}
      style={{}}
      viewBox="0 0 32 32"
      width={20}
    >
      <path
        d="M8.414 15.086a2 2 0 10-2.828 2.828l2.828-2.828zM12.5 22l-1.414 1.414a2 2 0 002.8.029L12.5 22zm13.885-10.557a2 2 0 00-2.77-2.886l2.77 2.886zm-20.8 6.471l5.5 5.5 2.83-2.828-5.5-5.5-2.83 2.828zm8.3 5.529l12.5-12-2.77-2.886-12.5 12 2.77 2.886z"
        fill="#42D689"
        style={{}}
      />
    </svg>
  </View>
</View>
`;
